--- a/frontend/blog/style.css
+++ b/frontend/blog/style.css
@@ -18,4 +18,10 @@
 #titleContainer >div{
     display: flex;
     gap: 10px;
+    text-transform: uppercase;
+    font-style: italic;
+}
+#blog-content{
+    text-align: justify;
+    padding: 20px;
 }
