--- a/frontend/blog/style.css
+++ b/frontend/blog/style.css
@@ -1,27 +1,41 @@
-#blogHeader{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 50px;
-    padding: 20px;
-    border-bottom: 2px solid black;
+#blogHeader {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 50px;
+	padding: 20px;
+	border-bottom: 2px solid black;
 }
-#blog-category{
-    margin-left:10px;
+#blog-category {
+	margin-left: 10px;
 }
 
-#titleContainer{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+#titleContainer {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
-#titleContainer >div{
-    display: flex;
-    gap: 10px;
-    text-transform: uppercase;
-    font-style: italic;
+#titleContainer > div {
+	display: flex;
+	gap: 10px;
+	text-transform: uppercase;
+	font-style: italic;
+	width: 100%;
 }
-#blog-content{
-    text-align: justify;
-    padding: 20px;
+#blog-content {
+	text-align: justify;
+	padding: 20px;
+}
+#blog-info {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 10px;
+}
+#blog-title-footer {
+	display: flex;
+	width: 100%;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 }
